# AdventOfCode2018

./: CMakeLists.txt  README.md  main.cpp
common/: file_loader.h  file_loader.inl  pair_iterator.h  pair_iterator.inl  zipper.h  zipper.inl
tasks/: all_days.h
tasks/day01/: day_01.cpp  day_01.h
tasks/day02/: day_02.cpp  day_02.h
tasks/day03/: day_03.cpp  day_03.h
tasks/day04/: day_04.cpp  day_04.h
